# imitate_weibo

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.json
src/contriller/: common_controller.rs
src/handle/: mod.rs  user_handle.rs
src/model/: config_model.rs  mod.rs  user_model.rs  user_sql_model.rs
src/router/: mod.rs  user_router.rs
src/server/: mod.rs
src/server/client/: login.rs  mod.rs
src/utils/: captcha.rs  config_init.rs  jwt.rs  md5.rs  mod.rs  redis.rs  res.rs
