[package]
name = "imitate_weibo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version= "0.60.0",features=["serve-static","oapi","logging","catch-panic","websocket","session"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# 读取JSON配置文件
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.6.1"
captcha = "0.0.9"
argon2 = "0.5.2"
jsonwebtoken = "9.2.0"
rbs = "4.5.2"

# 链接 Mysql
rbdc-mysql = "4.5.1"
once_cell = "1.19.0"
rbatis = "4.3.15"
mysql_async = "0.33.0"
diesel = "2.1.4"


# 链接Redis
redis = { version = "0.24.0", features = ["tokio-comp"] }
base64 = "0.21.5"
rand = "0.8.5"
chrono = "0.4.31"
